[gd_scene load_steps=3 format=3 uid="uid://bvmpiebrvecer"]

[ext_resource type="Texture2D" uid="uid://bqf3q688fe8uv" path="res://icon.svg" id="1_aqequ"]
[ext_resource type="Script" path="res://Autoloads/potion popup/potion_popup.gd" id="1_kdrpk"]

[node name="PotionPopup" type="CanvasLayer"]
layer = 17
script = ExtResource("1_kdrpk")

[node name="thing1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Description1" type="RichTextLabel" parent="thing1"]
unique_name_in_owner = true
offset_left = 3.0
offset_top = 532.0
offset_right = 379.0
offset_bottom = 653.0
size_flags_vertical = 3
text = "Description"

[node name="Title1" type="RichTextLabel" parent="thing1"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 44.0
offset_right = 378.0
offset_bottom = 116.0
size_flags_vertical = 3
text = "Title
"

[node name="MarginContainer" type="MarginContainer" parent="thing1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 100.0
offset_right = 388.0
offset_bottom = 508.0
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="VBoxContainer" parent="thing1/MarginContainer"]
layout_mode = 2

[node name="Picture1" type="TextureRect" parent="thing1/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_aqequ")
expand_mode = 5

[node name="thing2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -324.0
offset_right = -348.0
offset_bottom = -284.0
grow_horizontal = 0
grow_vertical = 2

[node name="Description2" type="RichTextLabel" parent="thing2"]
unique_name_in_owner = true
offset_left = 3.0
offset_top = 532.0
offset_right = 379.0
offset_bottom = 653.0
size_flags_vertical = 3
text = "Description"

[node name="Title2" type="RichTextLabel" parent="thing2"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 44.0
offset_right = 378.0
offset_bottom = 116.0
size_flags_vertical = 3
text = "Title
"

[node name="MarginContainer" type="MarginContainer" parent="thing2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 100.0
offset_right = 388.0
offset_bottom = 508.0
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="VBoxContainer" parent="thing2/MarginContainer"]
layout_mode = 2

[node name="Picture2" type="TextureRect" parent="thing2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_aqequ")
expand_mode = 5
